# dbms

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
dsource/: Cargo.toml
dsource/src/: csv.rs  lib.rs  memory.rs  parquet.rs
dsource/test/data/csv/: simple.csv
dsource/test/data/parquet/: simple.parquet
dtype/: Cargo.toml
dtype/src/: column.rs  field.rs  lib.rs  record.rs  schema.rs
exec/: Cargo.toml
exec/src/: lib.rs
optim/: Cargo.toml
optim/src/: lib.rs
plan/: Cargo.toml
plan/src/: lib.rs
src/: main.rs
